# coffee-scale

./: ADC.hpp  CMakeLists.txt  CMakePresets.json  CoffeeScale.cpp  CoffeeScale.hpp  GEMINI.md  HX711.cpp  HX711.hpp  README.md  build-host.sh  build-pico.sh  main.cpp
doc/: CoffeeScaleClasses.puml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  CoffeeScale.cpp  CoffeeScale.hpp  InterfaceTypes.hpp  LoadCell.cpp  LoadCell.hpp  main.cpp
src/bsp/: CMakeLists.txt  hx711_read.pio
src/config/: CMakeLists.txt  FreeRTOSConfig.h
src/core/: ADC.hpp  CMakeLists.txt
src/hal/: CMakeLists.txt  HX711.cpp  HX711.hpp
test/: CMakeLists.txt  test_example.cpp
test/app/: CMakeLists.txt  Helpers.hpp  Test_CoffeeScale.cpp  Test_LoadCell.cpp
